WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95774
[BlackBerry] Assignment operators missing self-check
https://bugs.webkit.org/show_bug.cgi?id=95774
Summary
[BlackBerry] Assignment operators missing self-check
George Staikos
Reported
2012-09-04 13:00:36 PDT
WebString and WebAnimation don't check for == this in the assignment operator.
Attachments
Patch
(1.66 KB, patch)
2012-09-04 13:02 PDT
,
George Staikos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
George Staikos
Comment 1
2012-09-04 13:02:19 PDT
Created
attachment 162086
[details]
Patch
Rob Buis
Comment 2
2012-09-05 12:10:20 PDT
Comment on
attachment 162086
[details]
Patch Ok.
WebKit Review Bot
Comment 3
2012-09-05 18:11:20 PDT
Comment on
attachment 162086
[details]
Patch Clearing flags on attachment: 162086 Committed
r127670
: <
http://trac.webkit.org/changeset/127670
>
WebKit Review Bot
Comment 4
2012-09-05 18:11:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug