[BlackBerry] Assignment operators missing self-check https://bugs.webkit.org/show_bug.cgi?id=95774

Reviewed by Rob Buis.

Add a test for self-assignment.

* Api/WebAnimation.cpp:
(BlackBerry::WebKit::WebAnimation::operator=):
* Api/WebString.cpp:
(BlackBerry::WebKit::WebString::operator=):


Canonical link: https://commits.webkit.org/113772@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127670 268f45cc-cd09-0410-ab3c-d52691b4dbfc